Change table color scheme and fix layout issues

--- a/web/styles/blog.css
+++ b/web/styles/blog.css
@@ -377,8 +377,8 @@
 
 .post__content table p,
 .post__content table ul {
+  margin: 0;
   padding: 0;
-  max-width: 35em;
 }
 
 .post__content li ul {
@@ -472,6 +472,11 @@
   margin-top: .5rem;
 }
 
+.post__content table li {
+  margin-left: 1.2rem;
+  padding-left: .1rem;
+}
+
 /* Content: Code
    ========================================================================= */
 
@@ -497,14 +502,20 @@
 
 .post__content table {
   width: 100%;
-  background-color: #444;
-  color: #fff;
   margin: 1em 0;
+  border-top: 1px solid #e5e5e5;
+  border-bottom: 2px solid #e5e5e5;
   border-collapse: collapse;
+  background-color: white;
 }
 
 .post__content code {
   color: inherit;
+}
+
+.post__content thead {
+  background-color: #eee;
+  border-bottom: 1px solid #e8e8e8;
 }
 
 .post__content th {
@@ -514,13 +525,14 @@
 
 .post__content thead th {
   padding: .75em .75em .2em;
-  border-bottom: 1px solid #bbb;
   text-align: left;
 }
 
 .post__content tbody th {
   padding: .5em .75em;
-  color: #999;
+  vertical-align: top;
+  font-size: .9em;
+  color: #777;
 }
 
 .post__content tbody th:first-child:not(:only-child) {
@@ -529,17 +541,29 @@
 
 .post__content tbody th.group {
   text-transform: uppercase;
-  background-color: #555;
+  background-color: #ddd;
+  border-top: 1px solid #d3d3d3;
   letter-spacing: .15em;
+  font-size: .75em;
   color: #999;
 }
 
 .post__content tbody td {
   padding: .5em .75em;
+  vertical-align: top;
+}
+
+.post__content tbody * + td {
+  border-left: 1px solid #f0f0f0;
 }
 
 .post__content tbody tr:nth-child(even) {
-  background-color: #494949;
+  background-color: #f8f8f8;
+}
+
+.post__content tbody tr:hover > * {
+  background-color: hsl(199, 75%, 97%);
+  border-color: hsl(199, 75%, 90%);
 }
 
 /* =========================================================================
